VectorForgeML.Rcheck/00install.out
* installing *source* package 'VectorForgeML' ...
** this is package 'VectorForgeML' version '0.1.0'
** using staged installation
** libs
using C++ compiler: 'G__~1.EXE (GCC) 13.3.0'
g++ -std=gnu++17  -I"C:/PROGRA~1/R/R-45~1.2/include" -DNDEBUG  -I'C:/Users/mushe/AppData/Local/R/win-library/4.5/Rcpp/include'   -I"c:/rtools45/x86_64-w64-mingw32.static.posix/include"   -fopenmp   -O2 -Wall  -mfpmath=sse -msse2 -mstackrealign    -c DecisionTree.cpp -o DecisionTree.o
g++ -std=gnu++17  -I"C:/PROGRA~1/R/R-45~1.2/include" -DNDEBUG  -I'C:/Users/mushe/AppData/Local/R/win-library/4.5/Rcpp/include'   -I"c:/rtools45/x86_64-w64-mingw32.static.posix/include"   -fopenmp   -O2 -Wall  -mfpmath=sse -msse2 -mstackrealign    -c KMeans.cpp -o KMeans.o
g++ -std=gnu++17  -I"C:/PROGRA~1/R/R-45~1.2/include" -DNDEBUG  -I'C:/Users/mushe/AppData/Local/R/win-library/4.5/Rcpp/include'   -I"c:/rtools45/x86_64-w64-mingw32.static.posix/include"   -fopenmp   -O2 -Wall  -mfpmath=sse -msse2 -mstackrealign    -c KNN.cpp -o KNN.o
g++ -std=gnu++17  -I"C:/PROGRA~1/R/R-45~1.2/include" -DNDEBUG  -I'C:/Users/mushe/AppData/Local/R/win-library/4.5/Rcpp/include'   -I"c:/rtools45/x86_64-w64-mingw32.static.posix/include"   -fopenmp   -O2 -Wall  -mfpmath=sse -msse2 -mstackrealign    -c LinearRegression.cpp -o LinearRegression.o
g++ -std=gnu++17  -I"C:/PROGRA~1/R/R-45~1.2/include" -DNDEBUG  -I'C:/Users/mushe/AppData/Local/R/win-library/4.5/Rcpp/include'   -I"c:/rtools45/x86_64-w64-mingw32.static.posix/include"   -fopenmp   -O2 -Wall  -mfpmath=sse -msse2 -mstackrealign    -c LogisticRegression.cpp -o LogisticRegression.o
g++ -std=gnu++17  -I"C:/PROGRA~1/R/R-45~1.2/include" -DNDEBUG  -I'C:/Users/mushe/AppData/Local/R/win-library/4.5/Rcpp/include'   -I"c:/rtools45/x86_64-w64-mingw32.static.posix/include"   -fopenmp   -O2 -Wall  -mfpmath=sse -msse2 -mstackrealign    -c PCA.cpp -o PCA.o
g++ -std=gnu++17  -I"C:/PROGRA~1/R/R-45~1.2/include" -DNDEBUG  -I'C:/Users/mushe/AppData/Local/R/win-library/4.5/Rcpp/include'   -I"c:/rtools45/x86_64-w64-mingw32.static.posix/include"   -fopenmp   -O2 -Wall  -mfpmath=sse -msse2 -mstackrealign    -c RandomForest.cpp -o RandomForest.o
g++ -std=gnu++17  -I"C:/PROGRA~1/R/R-45~1.2/include" -DNDEBUG  -I'C:/Users/mushe/AppData/Local/R/win-library/4.5/Rcpp/include'   -I"c:/rtools45/x86_64-w64-mingw32.static.posix/include"   -fopenmp   -O2 -Wall  -mfpmath=sse -msse2 -mstackrealign    -c RcppExports.cpp -o RcppExports.o
g++ -std=gnu++17  -I"C:/PROGRA~1/R/R-45~1.2/include" -DNDEBUG  -I'C:/Users/mushe/AppData/Local/R/win-library/4.5/Rcpp/include'   -I"c:/rtools45/x86_64-w64-mingw32.static.posix/include"   -fopenmp   -O2 -Wall  -mfpmath=sse -msse2 -mstackrealign    -c RidgeRegression.cpp -o RidgeRegression.o
g++ -std=gnu++17  -I"C:/PROGRA~1/R/R-45~1.2/include" -DNDEBUG  -I'C:/Users/mushe/AppData/Local/R/win-library/4.5/Rcpp/include'   -I"c:/rtools45/x86_64-w64-mingw32.static.posix/include"   -fopenmp   -O2 -Wall  -mfpmath=sse -msse2 -mstackrealign    -c SoftmaxRegression.cpp -o SoftmaxRegression.o
SoftmaxRegression.cpp: In function 'void softmax_fit(SEXP, Rcpp::NumericMatrix, Rcpp::IntegerVector, double, int)':
SoftmaxRegression.cpp:62:15: error: 'gradb' was not declared in this scope
   62 |     std::fill(gradb.begin(), gradb.end(), 0.0);
      |               ^~~~~
SoftmaxRegression.cpp:66:9: error: 'logits' was not declared in this scope
   66 |         logits[c] = Z[i + c*n] + m->b[c];
      |         ^~~~~~
SoftmaxRegression.cpp:69:32: error: 'logits' was not declared in this scope
   69 |       double lse = log_sum_exp(logits);
      |                                ^~~~~~
SoftmaxRegression.cpp:81:96: error: 'gradW' was not declared in this scope
   81 |     F77_CALL(dgemm)(transT, transN, &p, &k, &n, &alpha, X.begin(), &n, Err.data(), &n, &beta0, gradW.data(), &p FCONE FCONE);
      |                                                                                                ^~~~~
make: *** [C:/PROGRA~1/R/R-45~1.2/etc/x64/Makeconf:296: SoftmaxRegression.o] Error 1
ERROR: compilation failed for package 'VectorForgeML'
* removing 'E:/VectorForgeML/VectorForgeML.Rcheck/VectorForgeML'
